--- a/Linear_Regression_with_OLS_and_SGD.ipynb
+++ b/Linear_Regression_with_OLS_and_SGD.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyPyBWdmc/mmVBYvagFnsq0A",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Parinita-Jain/ML_LectureNotes/blob/main/Linear_Regression_with_OLS_and_SGD.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "source": [
@@ -35,10 +47,29 @@
         "'''"
       ],
       "metadata": {
-        "id": "PZfyWpeVEwzQ"
+        "id": "PZfyWpeVEwzQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 90
+        },
+        "outputId": "d014907b-3369-40fb-b4bd-7cab05cf09a0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'\\nComparison of Linear Regression Using OLS and SGD\\n1. Overview of the Methods\\nOrdinary Least Squares (OLS):\\n\\nFinds the optimal weights (𝑤) and bias (b) by minimizing the sum of squared residuals directly.\\nUses matrix operations to derive the closed-form solution.\\nSuitable for small datasets due to computational efficiency.\\n\\nStochastic Gradient Descent (SGD):\\n\\nIteratively adjusts the weights and bias by moving in the direction of the gradient of the loss function.\\nWorks well for large datasets or when computational efficiency is required.\\n\\n\\n'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -53,10 +84,29 @@
         "'''"
       ],
       "metadata": {
-        "id": "GMXzh2Zp0z6f"
+        "id": "GMXzh2Zp0z6f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "724e4eff-fbaa-43f9-90c8-9fef92f25e89"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'\\nAdvantages of SGD\\nFaster updates on large datasets since it processes one sample at a time.\\nCan escape local minima due to noisy updates.\\nDisadvantages of SGD\\nNoisy updates can lead to instability.\\nRequires careful tuning of the learning rate.\\n'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -144,10 +194,29 @@
         "'''\n"
       ],
       "metadata": {
-        "id": "WdEsvvc200AV"
+        "id": "WdEsvvc200AV",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 126
+        },
+        "outputId": "9ea1e647-ddd5-4b4d-edee-18624006bbeb"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'\\nExplanation of the Code\\nOLS:\\n\\nComputes the optimal weights (w) and bias (b) using the closed-form formula.\\nPredictions for y are made using the derived model.\\n\\nSGD:\\n\\nInitializes weights and bias to zero.\\nIteratively updates weights and bias for each sample in each epoch.\\nStores intermediate predictions to visualize how the model evolves.\\n\\nVisualization:\\n\\nActual data points are plotted as a scatter plot.\\nOLS regression line is shown in green (straight line).\\nSGD regression line is shown in red after convergence.\\nIntermediate SGD steps are visualized using gray dashed lines for better understanding.\\nOutput\\nGraph:\\nShows the progression of SGD and the comparison with OLS.\\nFinal Parameters:\\nDisplays w and b for both OLS and SGD.\\n\\nThe code snippet is part of the visualization process where the\\nintermediate predictions from Stochastic Gradient Descent (SGD) are plotted. Here\\'s a detailed explanation:\\n\\nLine Breakdown\\n1. Enumerating Over Intermediate Predictions\\n\\nfor i, y_pred in enumerate(history_y_pred[::len(X)]):\\nhistory_y_pred: A list storing the predictions of\\ny at each step of SGD after updating weights and bias.\\nhistory_y_pred[::len(X)]:\\nThis slicing retrieves predictions after completing each full pass (epoch) over the dataset.\\nlen(X) represents the number of samples in the dataset.\\nhistory_y_pred[::len(X)] means: \"Take every\\nlen(X)-th element from history_y_pred,\" corresponding to the end of each epoch.\\n2. Plotting Intermediate Predictions\\n\\nplt.plot(X, y_pred, linestyle=\\'--\\', color=\\'gray\\', alpha=0.4, label=f\\'Epoch {i + 1} (SGD)\\' if i < 1 else \"\")\\nplt.plot(X, y_pred, ...): Plots the\\nX values against the intermediate predictions\\ny pred\\n\\u200b\\n .\\nlinestyle=\\'--\\': Dashed line style for intermediate predictions to visually distinguish them from final predictions or the OLS line.\\ncolor=\\'gray\\': A light gray color for the dashed lines, indicating intermediate steps.\\nalpha=0.4: Adjusts transparency to make the intermediate steps less prominent and avoid cluttering the plot.\\nlabel=f\\'Epoch {i + 1} (SGD)\\' if i < 1 else \"\":\\nAdds a label only for the first dashed line to show that it corresponds to an intermediate SGD prediction after \"Epoch 1.\"\\nFor subsequent epochs, the label is left empty (\"\") to avoid repeated legends.\\nPurpose\\nThis block adds a visual representation of how the SGD model evolves:\\n\\nThe dashed lines show the predictions at the end of each epoch.\\nIt helps you see how the model\\'s predictions gradually converge to the final solution.\\nKey Example\\nImagine:\\n\\n𝑋=[1,2,3,4,5]\\n𝑦=[1.2,2.4,3.1,4.5,5.0]\\nIf history_y_pred contains predictions after each update, for\\n10 epochs, the list might look like:\\n\\n\\nhistory_y_pred = [\\n    [0.5, 0.8, 1.0, 1.3, 1.6],  # After first few updates\\n    [0.8, 1.4, 1.8, 2.2, 2.6],  # End of Epoch 1\\n    [1.0, 1.6, 2.1, 2.5, 3.0],  # End of Epoch 2\\n    ...\\n]\\nThis snippet ensures only these epoch-level predictions are plotted:\\n\\nFirst epoch prediction: [0.8, 1.4, 1.8, 2.2, 2.6]\\nSecond epoch prediction: [1.0, 1.6, 2.1, 2.5, 3.0]\\nAnd so on, creating dashed lines for each epoch.\\n\\n\\n'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -233,9 +302,9 @@
           "height": 600
         },
         "id": "_qNSOqIzLmLJ",
-        "outputId": "201f55a7-d016-4885-c1f5-c1be8e8e7936"
+        "outputId": "4634eb18-011c-449d-edc4-8163831c7335"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
